manifest-useCases/statefulset-app/base/applications/statefulset-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:  
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: quay.io/cprakash2118/famous-quotes
        ports:
        - containerPort: 8000
