manifest-useCases/statefulset-app/base/applications/statefulset-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: frontend
 #type: LoadBalancer
  type: ClusterIP
